Fix too small hit boxes for due on menu items

--- a/assets/sass/components/dropdownMenu.scss
+++ b/assets/sass/components/dropdownMenu.scss
@@ -56,6 +56,7 @@ drop-down-menu [role="menuitem"],
   padding: $space calc($space * 1.5);
   text-align: left;
   height: auto;
+  width: 100%;
 
   line-height: 1.3;
   text-decoration: none;
